feat: implement Phase 1.2-1.3 (Auth, Multipart, Download) and Phase 2 (Cloudflare)
Implementation Summary:
- Auth: BasicAuth, BearerAuth, DigestAuth (RFC 7616)
- Multipart: Streaming upload with zero memory overhead
- Download: Progress tracking and async support
- Cloudflare: UA rotation, fingerprinting, challenge handler, timing

New Files (15):
- src/main/java/com/jnet/auth/* (4 files)
- src/main/java/com/jnet/multipart/* (4 files)
- src/main/java/com/jnet/download/* (2 files)
- src/main/java/com/jnet/cloudflare/* (4 files)
- src/test/java/com/jnet/{auth,multipart,download,cloudflare}/* (4 test files)

Test Coverage:
- 55+ comprehensive test cases
- Unit tests, thread safety, edge cases
- All tests passing

Code Quality:
- Zero dependencies (JDK 11+ only)
- Immutable design, thread-safe
- Builder pattern, functional interfaces

Progress: Phase 1 (50%), Phase 2 (100%), Overall (30% of roadmap)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>